# blackbull-demosite

./: .gitignore  LICENSE  README.md  blackbull-demo-site-requirements.md  pyproject.toml
.claude/planning/recommendations/: beartype-forwardref-bracket-mismatch.md
.github/: copilot-instructions.md
.github/skills/: update-blackbull.md
.github/workflows/: deploy.yml  health-check.yml
planning/recommendations/: blackbull-ipv6-empty-reply.md  blackbull-requires-python-mismatch.md
scripts/: deploy.sh  diagnose-401.sh  gen-cert.sh  restart.sh  run-service.sh
src/blackbull_demo/: __init__.py  app.py  stats.py  templates.py
static/: style.css  style.css.br
tests/: conftest.py  test_app.py  test_stats.py
