[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blackbull-demo"
version = "0.1.0"
description = "Live demo site for the BlackBull ASGI framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blackbull>=0.53.4",
    "blackbull-htcpcp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "blackbull[testing]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/blackbull_demo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
